<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="207dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="254dp"
            android:src="@drawable/trip_logo" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="145dp"
        android:hint="@string/email"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textSize="30sp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/nickname"
        android:textSize="30sp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button_sign_up"
            android:text="@string/sign_up"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="14sp" />
</LinearLayout>

