<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login_fragment_dest">

    <fragment
        android:id="@+id/discovery_fragment_dest"
        android:name="com.tiparo.tripway.discovery.ui.DiscoveryFragment"
        android:label="@string/fragment_discovery_label"
        tools:layout="@layout/fragment_discovery">
        <argument
            android:name="user_message"
            android:defaultValue="0"
            app:argType="integer" />
        <action
            android:id="@+id/action_discovery_fragment_dest_to_post_point_list_fragment_dest"
            app:destination="@id/postPointGraph" />
        <action
            android:id="@+id/action_discovery_fragment_dest_to_trip_detail_fragment"
            app:destination="@id/trip_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/login_fragment_dest"
        android:name="com.tiparo.tripway.login.ui.LoginFragment"
        android:label="@string/fragment_login_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_fragment_to_discovery_fragment"
            app:popUpTo="@id/login_fragment_dest"
            app:popUpToInclusive="true"
            app:destination="@id/discovery_fragment_dest" />
    </fragment>

    <navigation
        android:id="@+id/postPointGraph"
        app:startDestination="@id/post_point_list_fragment_dest">
        <fragment
            android:id="@+id/post_point_list_fragment_dest"
            android:name="com.tiparo.tripway.posting.ui.PostPointListFragment"
            android:label="@string/fragment_post_point_list_label"
            app:startDestination="@id/action_post_point_list_fragment_dest_to_post_point_map_fragment_dest"
            tools:layout="@layout/fragment_post_point_list">
            <action
                android:id="@+id/action_post_point_list_fragment_dest_to_post_point_map_fragment_dest"
                app:destination="@id/post_point_map_fragment_dest" />
        </fragment>
        <fragment
            android:id="@+id/post_point_map_fragment_dest"
            android:name="com.tiparo.tripway.posting.ui.PostPointMapFragment"
            android:label="@string/fragment_post_point_map_label"
            tools:layout="@layout/fragment_post_point_map">
            <action
                android:id="@+id/action_post_point_map_fragment_dest_to_post_point_photos_fragment_dest"
                app:destination="@id/post_point_photos_fragment_dest" />
        </fragment>
        <fragment
            android:id="@+id/post_point_photos_fragment_dest"
            android:name="com.tiparo.tripway.posting.ui.PostPointPhotosFragment"
            android:label="@string/fragment_post_point_photos_label"
            tools:layout="@layout/fragment_post_point_photos">
            <action
                android:id="@+id/action_post_point_photos_fragment_dest_to_post_point_description_fragment_dest"
                app:destination="@id/post_point_description_fragment_dest" />
        </fragment>
        <fragment
            android:id="@+id/post_point_description_fragment_dest"
            android:name="com.tiparo.tripway.posting.ui.PostPointDescriptionFragment"
            android:label="@string/fragment_post_point_description_label"
            tools:layout="@layout/fragment_post_point_description">
            <action
                android:id="@+id/action_post_point_description_fragment_dest_to_discovery_fragment_dest"
                app:destination="@id/discovery_fragment_dest"
                app:popUpTo="@id/discovery_fragment_dest"
                app:popUpToInclusive="true" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/trip_detail_fragment"
        android:name="com.tiparo.tripway.trippage.ui.TripDetailFragment"
        tools:layout="@layout/fragment_detail_trip">
        <argument
            android:name="tripId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment_dest"
        android:name="com.tiparo.tripway.profile.ui.ProfileFragment"
        tools:layout="@layout/fragment_profile_page">

    </fragment>

</navigation>