<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.tiparo.tripway.posting.ui.PostPointViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/newTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewmodel.isNewPoint ? View.VISIBLE:View.GONE}"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/margin_icon_text"
                android:src="@drawable/ic_trip_name"
                android:tint="@color/colorIconColor" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newTripNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@={viewmodel.tripName}"
                android:gravity="start|top"
                android:hint="@string/post_point_add_trip_name_hint"
                android:inputType="textAutoCorrect"
                android:maxLength="35"
                android:paddingVertical="8dp"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/newTripName">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/margin_icon_text"
                android:src="@drawable/ic_edit"
                android:tint="@color/colorIconColor" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/describePointEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@={viewmodel.description}"
                android:gravity="start|top"
                android:hint="@string/post_point_add_description_hint"
                android:inputType="textMultiLine|textAutoCorrect"
                android:maxLength="2000"
                android:maxLines="20"
                android:paddingVertical="8dp"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <!--TODO поставить нормальный font family -->
        <Button
            android:id="@+id/publishPointButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/post_point_button"
            android:text="@string/publishPoint"
            android:textAllCaps="false"
            android:textColor="@color/colorTextOnButton"
            android:textSize="@dimen/h5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>